welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:4: error: ')' expected but $XMLSTART$< found.
else {if (a < b && b <c) {return true}
                     ^inOrderEqual:7: error: illegal start of simple expression
}
^